# near_hack_contract

./: Cargo.toml  cli.txt
contract/src/: cli.txt  lib.rs
